youtube videos added

--- a/lidar.lionn/index.html
+++ b/lidar.lionn/index.html
@@ -216,7 +216,6 @@
       <button class="btn see-more">See more</button>
     </a>
   </div>
-
   <!-- break-->
   <br>
   <br>
@@ -254,8 +253,46 @@
   <h1>
     Watch lidar.lionn in action
   </h1>
-  <iframe class="responsive-embedded-video" width="560" height="315" src="https://www.youtube.com/embed/Qzf1OL-r9Ck" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  <iframe class="responsive-embedded-video" width="560" height="315" src="https://www.youtube.com/embed/BzreNm47-iI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <!-- this is complete playlist of features. but it might be an overkill at the website. so masking it out against two simple videos -->
+  <!-- <iframe class="responsive-embedded-video" 
+    width="560"  
+    height="315" 
+    src="https://www.youtube-nocookie.com/embed/videoseries?si=ROxwk71gmnskqxRM&amp;controls=0&amp;list=PLgkyRCu0-7Qw-ZQhh7870uK8NO8m5u2US&rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+  </iframe>   -->
+
+  <!-- line and arc feature -->
+  <!-- <iframe class="responsive-embedded-video" 
+    width="560" 
+    height="315" 
+    src="https://www.youtube.com/embed/Qzf1OL-r9Ck?rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1&playlist=Qzf1OL-r9Ck" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe> -->
+  <!-- curve capture feature -->
+  <iframe class="responsive-embedded-video" 
+    width="560" 
+    height="315" 
+    src="https://www.youtube.com/embed/BzreNm47-iI?rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1&playlist=BzreNm47-iI" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+  </iframe>
+  <!-- Digitizing Sketches case study -->
+  <!-- <iframe  class="responsive-embedded-video" 
+    width="560" height="315" 
+    src="https://www.youtube-nocookie.com/embed/q1dXOjT3NnM?si=RSx5JeGz2So2w4bh&amp?rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1&playlist=q1dXOjT3NnM" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+  </iframe> -->
+  <iframe class="responsive-embedded-video" 
+    width="560" height="315" 
+    src="https://www.youtube-nocookie.com/embed/q1dXOjT3NnM?si=mYI5u4CXH8ViE44y&amp;controls=0;rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1&playlist=q1dXOjT3NnM" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    allowfullscreen>
+  </iframe>
+                                      
   </div>
   <hr/>
   <!-- break-->
@@ -286,6 +323,47 @@
       <a href="https://1074vectors.com" style=" font-size: 3vw; color: white;"> Visit 1074Vectors.com </a>
     </p>
   </div>
+  <hr/>
+  <div style="text-align: center; padding-left: 10%; padding-right: 10%;">
+  <h1>
+    From R&D and customization desk...
+  </h1>
+  <iframe class="responsive-embedded-video"
+    width="560"
+    height="315" 
+    src="https://www.youtube.com/embed/9chak4enmQU?si=HM-BbHIKX8TIETzx?rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1&playlist=9chak4enmQU" 
+    title="lidarlionn R&D" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; loop; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    allowfullscreen>
+  </iframe>  
+ 
+  <iframe class="responsive-embedded-video"
+    width="560" height="315" 
+    src="https://www.youtube.com/embed/dWbsYvJOb1E?si=8gwQeHXwdMeki-qV?rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1&playlist=dWbsYvJOb1E" 
+    title="Intelligent tracing assistant on 2D imagery" 
+    frameborder="0" 
+    allow="accelerometer; autoplay;  loop;clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+  </iframe>
+
+  <iframe class="responsive-embedded-video"
+    width="560" height="315" 
+    src="https://www.youtube.com/embed/XzYTCQzTqSs?si=tpc9d6yzI3WVGji5?rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1&playlist=XzYTCQzTqSs" 
+    title="web interface for showing mapped areas. R&D desk" 
+    frameborder="0" 
+    allow="accelerometer; autoplay;  loop; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+  </iframe>
+
+  <iframe class="responsive-embedded-video"
+    width="560" height="315" 
+    src="https://www.youtube.com/embed/oX04g3XSMNM?si=TzoDl1Z2Ai1568pr?rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1&playlist=oX04g3XSMNM" 
+    title="Supervisor terminal shows interested user screens. Concept/R&D desk" 
+    frameborder="0" 
+    allow="accelerometer; autoplay;  loop; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+  </iframe>
+  
+  </div>
+  <hr/>
   <div style="background: #f5f5f0; margin-top:2%;">
     <picture>
       <img src="da_vinci.svg" class="responsive slide-small-device" alt="lidarlionn" />
